--- a/ipumsr_webinar.Rmd
+++ b/ipumsr_webinar.Rmd
@@ -190,22 +190,35 @@ is in sociology.
 
 .dan-pet2[]
 
-.kara-pet[]
+.kara-pet1[]
 
+.kara-pet2[]
 
 <style>
-.kara-pet {
+.kara-pet1 {
   background-color: #000000;
   background-image: url(images/Ru.jpg);
   background-size: cover;
-  width: 140px;
+  width: 120px;
   height: 160px;
   position: absolute;
-  left: 650px;
+  left: 600px;
   bottom: 200px;
 }
 </style>
 
+<style>
+.kara-pet2 {
+  background-color: #000000;
+  background-image: url(images/harvey.jpg);
+  background-size: cover;
+  width: 120px;
+  height: 160px;
+  position: absolute;
+  left: 730px;
+  bottom: 200px;
+}
+</style>
 
 ???
 
