--- a/ipumsr_webinar_presenter_notes.Rmd
+++ b/ipumsr_webinar_presenter_notes.Rmd
@@ -209,7 +209,7 @@ publicly available, but email IPUMS support at ipums@umn.edu if you're
 interested in becoming a beta tester.
 
 
-# To run the code in this webinar (30)
+# To run the code in this presentation (30)
 
 Repeat: slides/recording will be available. To run this code yourself you can clone/download the repo from our github. This provides the data extracts you'll need. 
 
@@ -832,10 +832,6 @@ client tools in the "ipumspy" module.
 
 If you are using ipumsr, the `define_extract_from_json()` function will create
 an extract object from a JSON-formatted definition shared by someone else.
-
-As Dan pointed out as we were preparing this webinar, this functionality could 
-also be useful for instructors who want to share an extract definition with 
-students for a class assignment.
 
 
 # Overview (89)
